--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,6 +30,10 @@ body {
   cursor: pointer;
 }
 
+input {
+  height: 24px;
+}
+
 .load-more {
   display: block;
   background-color: rgb(63, 87, 179);
@@ -38,22 +42,57 @@ body {
   color: white;
   padding: 7px;
   text-align: center;
+  border-radius: 5px;
   text-decoration: none;
+  cursor: pointer;
   font-size: 14px;
+  margin-bottom: 20px;
 }
 
 .is-hidden {
   display: none;
 }
 
+.photo-card {
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
+  border-radius: 6px;
+  transition: transform 250ms ease-out;
+  overflow: hidden;
+}
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   grid-gap: 20px;
-  padding: 0;
-  margin: 0;
-  max-width: calc(100vw - 80px);
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 30px;
+  margin: 20px;
+}
+
+.gallery img {
+  display: block;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.info {
+  display: flex;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+}
+
+.info-item {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 25px;
+  justify-content: space-between;
+  padding: 10px 15px;
+}
+
+b {
+  font-weight: normal;
+  font-size: 14px;
 }
